syntax = "proto3";

package hello;

option go_package = "gitlab.com/australia-wide-first-aid/ezypay/internal/gen/hello";

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
}
