syntax = "proto3";

package hello;

import "messages.proto";

option go_package = "gitlab.com/australia-wide-first-aid/ezypay/internal/gen/hello";

// The greeting service definition
service HelloService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse);
}
